Upgrade to Java 21 on iteration 2