@@ -91,7 +91,7 @@ public class PurchaseOrderServiceIT
 
       // Finds the object from the database and checks it's the right one
       purchaseOrder = purchaseorderservice.findById(purchaseOrder.getId());
-      assertEquals(new Float(12.5F), purchaseOrder.getDiscountRate());
+      assertEquals(Float.valueOf(12.5F), purchaseOrder.getDiscountRate());
 
       // Updates the object
       purchaseOrder.setDiscount(43.25F);
@@ -99,7 +99,7 @@ public class PurchaseOrderServiceIT
 
       // Finds the object from the database and checks it has been updated
       purchaseOrder = purchaseorderservice.findById(purchaseOrder.getId());
-      assertEquals(new Float(43.25F), purchaseOrder.getDiscountRate());
+      assertEquals(Float.valueOf(43.25F), purchaseOrder.getDiscountRate());
 
       // Deletes the object from the database and checks it's not there anymore
       purchaseorderservice.remove(purchaseOrder);
